testsuite/gnatprove/tests/V704-041__image/test.out
test.adb:11:19: error: attribute "Image" on non-scalar type is not yet supported
gnatprove: error during flow analysis and proof
test.gpr: error: [Ada Analysis] test.adb (test.gpr) failed with status 5
